# remesa-blink

./: AGENTS.md  DEPLOY.md  Dockerfile  Dockerfile.bot  README.md  package.json  render.yaml
anchor/remesas_recurrentes/programs/remesas_recurrentes/: Cargo.toml
anchor/remesas_recurrentes/programs/remesas_recurrentes/src/: lib.rs
backend/: .env.example  package-lock.json  package.json  run-e2e-usdc.ts  run-keeper-airdrop.mjs  run-keeper-once.ts  run-keeper-usdc-ata.mjs  run-schema-prod.ts
backend/src/: app.ts  index.ts
backend/src/keeper/: cron.ts
backend/src/pricing/: liquidityService.ts  pricingEngine.ts  pricingRoutes.ts  timeSlots.ts  types.ts
backend/src/routes/: blinks.ts  etherfuse.ts  lidia.ts  lidiaBlinkRoutes.ts  suscripciones.ts  webhooks.ts
backend/src/services/: cNFTService.ts  elevenLabsService.ts  etherfuse.ts  lidiaAgent.ts  notificaciones.ts  solana.ts  suscripciones.ts  worldIdService.ts
blinks/: package-lock.json  package.json
blinks/src/: index.ts
bot/: .env.example  package-lock.json  package.json
bot/src/: index.ts
db/: pricing_schema.sql  schema.sql
