[package]
name = "remesas_recurrentes"
version = "0.1.0"
description = "Remesas recurrentes en Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "remesas_recurrentes"

[features]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
